Add in base configurations for OAuth authentication
