# routes/api.php
@@ -12,3 +12,4 @@
 */
 
 Route::get('/', ['as' => 'root', 'uses' => 'RootController@get']);
+Route::get('/authenticated', ['as' => 'root', 'uses' => 'RootController@getAuthenticated'])->middleware('auth:api')->middleware('scopes:self:read');;
