# storage/api-docs/api-docs.json
@@ -5,16 +5,21 @@
         "description": "This is the API for accessing data for ATLauncher.",
         "version": "1.0.0"
     },
-    "basePath": "/v2",
+    "basePath": "/",
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "paths": {
-        "/": {
+        "/v2": {
             "get": {
                 "tags": [
                     "root"
                 ],
-                "summary": "Returns a hello world message",
+                "summary": "Returns a hello world message.",
                 "description": "Simply returns a hello world message used for testing things out.",
-                "operationId": "get",
                 "produces": [
                     "application/json"
                 ],
@@ -27,13 +32,187 @@
                     }
                 }
             }
+        },
+        "/v2/authenticated": {
+            "get": {
+                "tags": [
+                    "root"
+                ],
+                "summary": "Route to test OAuth.",
+                "description": "This route is simply here to test OAuth authentication.",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "oauth": [
+                            "read:self"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/oauth/authorize": {
+            "get": {
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Authorize user to your application.",
+                "description": "Asks a user to login and authorize your application for the given scope and client. If the client is not already logged in with their ATLauncher account then they will\n *                  redirected to login first and then taken to a page displaying the scopes requested before being able to authorize or decline the request.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "client_id",
+                        "in": "query",
+                        "description": "The client ID to authorize against.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "redirect_uri",
+                        "in": "query",
+                        "description": "The url to redirect to once the authorization is allowed/denied.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "response_type",
+                        "in": "query",
+                        "description": "The response type to receive.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "scope",
+                        "in": "query",
+                        "description": "The scope to authorize against.",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/oauth/token": {
+            "post": {
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Get access token from code.",
+                "description": "Gets an access token from a code generated after a successful authorization.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "parameters",
+                        "in": "body",
+                        "description": "Parameters needed to be sent in order to retrieve the token.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/OauthTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/OauthTokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "unsupported grant_type value"
+                    },
+                    "401": {
+                        "description": "invalid client"
+                    }
+                }
+            }
         }
     },
-    "definitions": {},
+    "definitions": {
+        "OauthTokenRequest": {
+            "properties": {
+                "grant_type": {
+                    "type": "string",
+                    "default": "authorization_code"
+                },
+                "client_id": {
+                    "type": "string"
+                },
+                "client_secret": {
+                    "type": "string"
+                },
+                "redirect_uri": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
+                }
+            },
+            "xml": {
+                "name": "OauthTokenRequest"
+            }
+        },
+        "OauthTokenResponse": {
+            "properties": {
+                "token_type": {
+                    "type": "string",
+                    "default": "Bearer"
+                },
+                "expires_in": {
+                    "type": "integer"
+                },
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            },
+            "xml": {
+                "name": "OauthTokenResponse"
+            }
+        }
+    },
+    "securityDefinitions": {
+        "oauth": {
+            "type": "oauth2",
+            "flow": "accessCode",
+            "authorizationUrl": "/oauth/authorize",
+            "tokenUrl": "/oauth/token",
+            "scopes": {
+                "self:read": "read your account (except password)",
+                "self:write": "write to account data"
+            }
+        }
+    },
     "tags": [
         {
             "name": "root",
             "description": "Just root stuff"
+        },
+        {
+            "name": "oauth",
+            "description": "Oauth authentication"
         }
     ]
 }
